--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.0.0
+albumentations==1.3.1
 anyio==4.0.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -31,12 +32,14 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 grpcio==1.59.2
 idna==3.4
+imageio==2.33.0
 ipykernel==6.26.0
 ipython==8.17.2
 ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.19.2
@@ -54,6 +57,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
 jupyterlab_server==2.25.1
 kiwisolver==1.4.5
+lazy_loader==0.3
 loguru==0.7.2
 Markdown==3.5.1
 MarkupSafe==2.1.3
@@ -83,6 +87,7 @@ nvidia-nvjitlink-cu12==12.3.52
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 overrides==7.4.0
 packaging==23.2
 pandas==2.1.3
@@ -109,6 +114,7 @@ PyYAML==6.0.1
 pyzmq==25.1.1
 qtconsole==5.5.0
 QtPy==2.4.1
+qudida==0.0.4
 referencing==0.30.2
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -116,6 +122,10 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.12.0
 rsa==4.9
+scikit-image==0.22.0
+scikit-learn==1.3.2
+scipy==1.11.4
+seaborn==0.13.0
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -125,6 +135,8 @@ sympy==1.12
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 terminado==0.17.1
+threadpoolctl==3.2.0
+tifffile==2023.9.26
 tinycss2==1.2.1
 tomli==2.0.1
 torch==2.1.0
@@ -145,4 +157,3 @@ webencodings==0.5.1
 websocket-client==1.6.4
 Werkzeug==3.0.1
 widgetsnbextension==4.0.9
- 
