--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,121 @@
-absl-py==2.0.0
-albumentations==1.3.1
-anyio==4.0.0
+acvl-utils==0.2
+anyio==4.1.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==23.1.0
+Automat==20.2.0
 Babel==2.13.1
+batchgenerators==0.25
+bcrypt==3.2.0
 beautifulsoup4==4.12.2
 bleach==6.1.0
-cachetools==5.3.2
-certifi==2023.7.22
+blessings==1.7
+blinker==1.4
+certifi==2023.11.17
 cffi==1.16.0
+chardet==4.0.0
 charset-normalizer==3.3.2
+click==8.0.3
+cloud-init==23.2.1
+cmake==3.27.0
+colorama==0.4.6
 comm==0.2.0
+command-not-found==0.3
+configobj==5.0.6
+connected-components-3d==3.12.3
+constantly==15.1.0
 contourpy==1.2.0
+cryptography==3.4.8
 cycler==0.12.1
+dbus-python==1.2.18
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
-efficientnet-pytorch==0.7.1
-exceptiongroup==1.1.3
+dicom2nifti==2.4.9
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+dynamic-network-architectures==0.2
+exceptiongroup==1.2.0
 executing==2.0.1
-fastjsonschema==2.18.1
-filelock==3.13.1
-fonttools==4.44.0
+fastjsonschema==2.19.0
+filelock==3.12.2
+fonttools==4.45.1
 fqdn==1.5.1
-fsspec==2023.10.0
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-grpcio==1.59.2
+future==0.18.3
+gpustat==0.6.0
+graphviz==0.20.1
+hiddenlayer @ git+https://github.com/FabianIsensee/hiddenlayer.git@b7263b6dc4569da1b6dea5964e1eac78fa32fa77
+httplib2==0.20.2
+hyperlink==21.0.0
 idna==3.4
+imagecodecs==2023.9.18
 imageio==2.33.0
-ipykernel==6.26.0
+importlib-metadata==4.6.4
+incremental==21.3.0
+ipykernel==6.27.0
 ipython==8.17.2
-ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
+jeepney==0.7.1
 Jinja2==3.1.2
 joblib==1.3.2
 json5==0.9.14
+jsonpatch==1.32
 jsonpointer==2.4
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
 jupyter-events==0.9.0
 jupyter-lsp==2.2.0
 jupyter_client==8.6.0
 jupyter_core==5.5.0
-jupyter_server==2.10.0
+jupyter_server==2.10.1
 jupyter_server_terminals==0.4.4
-jupyterlab==4.0.8
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-jupyterlab_server==2.25.1
+jupyterlab==4.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+keyring==23.5.0
 kiwisolver==1.4.5
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 lazy_loader==0.3
+linecache2==1.0.0
+lit==16.0.6
 loguru==0.7.2
-Markdown==3.5.1
 MarkupSafe==2.1.3
-matplotlib==3.8.1
+matplotlib==3.8.2
 matplotlib-inline==0.1.6
+MedPy==0.4.0
 mistune==3.0.2
+more-itertools==8.10.0
 mpmath==1.3.0
 nbclient==0.9.0
 nbconvert==7.11.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
-networkx==3.2.1
+netifaces==0.11.0
+networkx==3.1
+nibabel==5.1.0
+nnunetv2==2.1
 notebook==7.0.6
 notebook_shim==0.2.3
-numpy==1.26.1
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.3.52
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-opencv-python==4.8.1.78
-opencv-python-headless==4.8.1.78
+numpy==1.26.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-ml-py3==7.352.0
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.0
 overrides==7.4.0
 packaging==23.2
 pandas==2.1.3
@@ -95,65 +123,86 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 Pillow==10.1.0
-platformdirs==3.11.0
-prometheus-client==0.18.0
-prompt-toolkit==3.0.39
-protobuf==4.23.4
+platformdirs==4.0.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
 pycparser==2.21
-Pygments==2.16.1
+pydicom==2.4.3
+Pygments==2.17.2
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+PyJWT==2.3.0
+pyOpenSSL==21.0.0
 pyparsing==3.1.1
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
+python-gdcm==3.0.22
 python-json-logger==2.0.7
+python-magic==0.4.24
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
-qtconsole==5.5.0
-QtPy==2.4.1
-qudida==0.0.4
-referencing==0.30.2
+referencing==0.31.0
 requests==2.31.0
-requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rpds-py==0.12.0
-rsa==4.9
+rpds-py==0.13.1
 scikit-image==0.22.0
 scikit-learn==1.3.2
 scipy==1.11.4
 seaborn==0.13.0
+SecretStorage==3.3.1
 Send2Trash==1.8.2
+service-identity==18.1.0
+SimpleITK==2.3.1
 six==1.16.0
 sniffio==1.3.0
+sos==4.4
 soupsieve==2.5
+ssh-import-id==5.11
 stack-data==0.6.3
 sympy==1.12
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-terminado==0.17.1
+systemd-python==234
+terminado==0.18.0
 threadpoolctl==3.2.0
 tifffile==2023.9.26
 tinycss2==1.2.1
 tomli==2.0.1
-torch==2.1.0
-torchaudio==2.1.0
+torch==2.0.1
+torchaudio==2.0.2
 torchsummary==1.5.1
-torchvision==0.16.0
+torchvision==0.15.2
 tornado==6.3.3
+tqdm==4.66.1
+traceback2==1.4.0
 traitlets==5.13.0
-triton==2.1.0
+triton==2.0.0
+Twisted==22.1.0
 types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
 tzdata==2023.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+unittest2==1.1.0
 uri-template==1.3.0
-urllib3==2.0.7
-wcwidth==0.2.9
+urllib3==2.1.0
+wadllib==1.3.6
+wcwidth==0.2.12
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
+win32-setctime==1.1.0
+xkit==0.0.0
+yacs==0.1.8
+zipp==1.0.0
+zope.interface==5.4.0
